# InMemoryFileChacher

InMemoryFileCacher/InMemoryFileCacher/: DirtyCacheHandler.cpp  DirtyCacheHandler.h  ExternalMemory.h  FileCache.cpp  FileCache.h  FileHandler.cpp  FileHandler.h  InMemoryFileCacher.cpp  ItemFIleReader.cpp  ItemFIleReader.h  ItemFile.txt  ItemFileProcessor.cpp  ItemFileProcessor.h  ItemFileWrapper.cpp  ItemFileWrapper.h  ItemFileWriter.h  LRUCache.cpp  LRUCache.h  Main.cpp  Reader1.txt  Reader2.txt  Reader3.txt  Writer1.txt  WriterFile.txt  stdafx.cpp  stdafx.h
InMemoryFileCacher/InMemoryFileCacher/src/: CMakeLists.txt  DirtyCacheHandler.h  ExternalMemory.cpp  FileHandler.h  InfoThreads.h  ItemFileProcessor.cpp  ItemFileReader.cpp  ItemFileReader.h  ItemFileWrapper.cpp  ItemFileWriter.cpp  Main.cpp  stdafx.h
InMemoryFileCacher/InMemoryFileCacher/test/: ItemFile.txt  Reader1.out.txt  Reader2.out.txt  Reader3.out.txt  ReaderFile.txt  Writer2.txt
